<resources>
    <string name="app_name">Second Lifestory</string>

    <!-- Activity titles -->
    <string name="title_activity_login">Connecting…</string>
    <string name="title_activity_character">Characters</string>
    <string name="title_activity_event">Events</string>
    <string name="title_activity_customize">Customize</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Menu/Action titles -->
    <string name="action_settings">Settings</string>
    <string name="action_customize">Customize</string>

    <!-- Shared strings -->
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="ok">@android:string/ok</string>
    <string name="no">@android:string/no</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="required">Required</string>
    <string name="must_be_greater_than_zero">Must be greater than zero.</string>

    <!-- Empty list item text -->
    <string name="eventsEmptyEntry">No Events</string>
    <string name="charactersEmptyEntry">No Characters</string>

    <!-- Login Activity -->
    <string name="login_activity_internet_connection_required">You must have an internet connection available when starting Second Lifestory</string>
    <string name="login_activity_invalid_credentials">Invalid login credentials.</string>

    <!-- Character List -->
    <string name="show_deceased">Show Deceased</string>
    <string name="load_characters_failed_error_message">An error occurred while loading the Characters.</string>

    <!-- Character Details -->
    <string name="character_name">Character Name</string>
    <string name="race">Race</string>
    <string name="character_class">Class</string>
    <string name="total_xp">Total XP</string>
    <string name="status">Status</string>
    <string name="delete_character_message">Delete This Character?</string>
    <string name="load_character_failed_error_message">An error occurred while loading the Character\'s details.</string>
    <string name="delete_character_error_message">An error occurred while deleting the Character.</string>

    <!-- Create/Edit Character -->
    <string name="create_character">Create Character</string>
    <string name="empty_character_name_error_message">Character name can\'t be empty.</string>
    <string name="load_classes_failed_error_message">Failed to load classes.</string>
    <string name="load_races_failed_error_message">Failed to load races.</string>
    <string name="class_label">Class</string>
    <string name="empty_character_class_spinner">Create a Class first.</string>
    <string name="empty_race_spinner">Create a Race first.</string>
    <string name="edit_character_load_error_message">An error occurred while loading the character.</string>

    <!-- Event Activity -->
    <string name="events_title_prefix">"Events for "</string>
    <string name="view_events">View Events List</string>

    <!-- Event List -->
    <string name="load_events_failed_error_message">An error occurred while loading the Events.</string>
    <string name="create_res_death_event_error_message">An error occurred while creating the event.</string>

    <!-- Event Details -->
    <string name="event_title">Event Title</string>
    <string name="date">Date</string>
    <string name="xp_gained">XP Gained</string>
    <string name="xp_gained_postfix">&#160;xp</string>
    <string name="characters_present">Shared By</string>
    <string name="characters_present_postfix">&#160;characters</string>
    <string name="description">Description</string>
    <string name="died">Died</string>
    <string name="resurrect">Resurrect</string>
    <string name="resurrected">Resurrected</string>
    <string name="delete_event_message">Delete This Event?</string>
    <string name="death_resurrect_deleted_error_message">An error occurred while updating your character\'s living status.</string>
    <string name="load_event_failed_error_message">An error occurred while loading the Event\'s details.</string>

    <!-- Create/Edit Event -->
    <string name="add_event">Add Event</string>
    <string name="edit_event">Edit Event</string>
    <string name="event_type">Event Type</string>
    <string name="create_event">Create Event</string>
    <string name="character_count_hint"># Characters</string>
    <string name="xp_amount_hint">XP Gained</string>
    <string name="event_description_hint">Description</string>
    <string name="event_title_hint">Event Title</string>
    <string name="what_killed_you">What killed you?</string>
    <string name="what_resurrected_you">What brought you back?</string>
    <string name="event_title_required_error_message">Title is required.</string>
    <string name="event_xp_gained_required_error_message">XP Gained is required.</string>
    <string name="event_shared_by_required_error_message"># Characters Present is required.</string>
    <string name="event_shared_by_greater_than_zero_error_message"># Characters present must be greater than zero.</string>
    <string name="save_event_error_message">An error occurred while saving the Event.</string>
    <string name="edit_event_load_error_message">An error occurred while loading the Event.</string>

    <!-- Customize Activity -->
    <string name="custom_races_and_classes">Custom Races &amp; Classes</string>
    <string name="race_name">Race Name</string>
    <string name="class_name">Class Name</string>
    <string name="save_new_race">Save New Race</string>
    <string name="save_new_class">Save New Class</string>
    <string name="delete_race">Delete Race</string>
    <string name="delete_class">Delete Class</string>
    <string name="new_race_created_message">New race saved.</string>
    <string name="new_race_already_exists">There is already a race with that name.</string>
    <string name="empty_race_name_error_message">Race name can\'t be empty.</string>
    <string name="new_class_created_message">New class saved.</string>
    <string name="new_class_already_exists">There is already a class with that name.</string>
    <string name="empty_class_name_error_message">Class name can\'t be empty.</string>
    <string name="cannot_delete_race">This race is in use by a character and cannot be deleted.</string>
    <string name="delete_race_confirm">Delete This Race?</string>
    <string name="race_deleted_message">Race Deleted.</string>
    <string name="cannot_delete_class">This class is in use by a character and cannot be deleted.</string>
    <string name="delete_class_confirm">Delete This Class?</string>
    <string name="class_deleted_message">Class Deleted.</string>
    <string name="empty_delete_race_spinner">No Races to Delete</string>
    <string name="empty_delete_character_class_spinner">No Classes to Delete</string>
    <string name="new_race_error_message">An error occurred while creating the Race.</string>
    <string name="new_class_error_message">An error occurred while creating the Class.</string>
    <string name="delete_race_error_message">An error occurred while deleting the Race.</string>
    <string name="delete_class_error_message">An error occurred while deleting the Class.</string>
    <string name="delete_all_races_error_message">An error occurred while deleting the Races.</string>
    <string name="delete_all_classes_error_message">An error occurred while deleting the Classes.</string>
    <string name="delete_all_characters_error_message">An error occurred while deleting the Characters.</string>

    <!-- Settings Activity -->
    <string name="tutorials">Tutorials and FAQs</string>
    <string name="delete_all_characters">Delete All Characters</string>
    <string name="delete_all_data">Delete All Data</string>
    <string name="copyright">&#169; 2015 - Drew Matheson &amp; Isaac West</string>
    <string name="characterNamePlaceholder">Name</string>
    <string name="characterDetailsPlaceholder">Description</string>
    <string name="delete_all_characters_dialog_message">All character information will be delete permanently. This can not be undone.</string>
    <string name="delete_all_data_dialog_message">All app data will be deleted permanently. This can not be undone.</string>
    <string name="delete_all_characters_dialog_title">Delete character data?</string>
    <string name="delete_all_data_dialog_title">Delete app data?</string>
    <string name="delete_all_characters_success">All characters removed.</string>
    <string name="delete_all_data_success">All data cleared.</string>

    <!-- Event Types -->
    <string name="event_type_combat">Combat</string>
    <string name="event_type_event">Event</string>
    <string name="event_type_death">Death</string>
    <string name="event_type_resurrection">Resurrection</string>
</resources>
