<?xml version="1.0" encoding="utf-8"?>

<!-- fragment_event_upsert.xml
    Purpose: Create/Edit fragment layout for EventUpsertFragment

    Drew Matheson, 2015.11.23: Created
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/fragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.secondlifestory.activities.event.EventUpsertFragment"
    android:clickable="true"> <!-- Prevent any fragments behind this from being clicked -->

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/loadingIndicator"
        android:progressDrawable="@drawable/loading_spinning_indicator"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/upsert_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_event"
        style="@style/pageHeader"/>

    <EditText
        android:id="@+id/upsert_event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_title_hint"
        android:inputType="text|textCapWords"
        android:singleLine="true"
        android:layout_below="@id/upsert_title" />

    <TextView
        android:id="@+id/upsert_event_type_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_type"
        android:layout_below="@id/upsert_event_title" />

    <Spinner
        android:id="@+id/upsert_event_type"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/upsert_event_type_label"/>

    <TextView
        android:id="@+id/upsert_event_character_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/upsert_event_type"
        android:layout_marginTop="12dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        android:text="@string/characters_present"/>
    <EditText
        android:id="@+id/upsert_event_character_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/upsert_event_character_count_label"
        android:layout_toEndOf="@id/upsert_event_character_count_label"
        android:layout_alignBaseline="@id/upsert_event_character_count_label"
        android:hint="@string/character_count_hint"
        android:inputType="number"
        android:singleLine="true"
        android:maxLength="9"/>

    <TextView
        android:id="@+id/upsert_event_experience_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/upsert_event_character_count_label"
        android:layout_marginTop="24dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        android:text="@string/total_xp" />
    <EditText
        android:id="@+id/upsert_event_experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@id/upsert_event_character_count"
        android:layout_alignStart="@id/upsert_event_character_count"
        android:layout_toRightOf="@id/upsert_event_experience_label"
        android:layout_toEndOf="@id/upsert_event_experience_label"
        android:layout_alignBaseline="@id/upsert_event_experience_label"
        android:hint="@string/xp_amount_hint"
        android:inputType="numberSigned"
        android:singleLine="true"
        android:maxLength="9"
        android:ems="10" />

    <Button
        android:id="@+id/upsert_cancel"
        style="@style/secondaryButton"
        android:text="@string/cancel"
        android:layout_alignParentBottom="true"/>

    <Button
        android:id="@+id/upsert_save"
        style="@style/primaryButton"
        android:layout_alignTop="@id/upsert_cancel"
        android:text="@string/save" />

    <TextView
        android:id="@+id/upsert_event_description_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/upsert_event_experience_label"
        android:layout_marginTop="16dp"
        android:text="@string/description"/>
    <EditText
        android:id="@+id/upsert_event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/upsert_cancel"
        android:hint="@string/event_description_hint"
        android:inputType="text|textCapSentences|textMultiLine|textLongMessage"
        android:minLines="2"
        android:layout_below="@id/upsert_event_description_label"/>

</RelativeLayout>