<?xml version="1.0" encoding="utf-8"?>

<!-- fragment_character_detail.xml
    Purpose: Detail fragment layout for CharacterDetailFragment

    Drew Matheson, 2015.11.17: Created
    Isaac West, 2015.11.24: Initial Layout
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activityLayout"
    tools:context="ca.secondlifestory.activities.character.PlayerStatsDetailFragment"
    android:clickable="true"> <!-- Prevent any fragments behind this from being clicked -->

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/loadingIndicator"
        android:progressDrawable="@drawable/loading_spinning_indicator"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/character_name"
        style="@style/pageHeader"
        android:layout_alignParentTop="true"
        android:text="@string/character_name"
        android:maxLines="2"
        android:ellipsize="start"/>

    <LinearLayout
        android:id="@+id/character_details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/character_name">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
            <TextView
                style="@style/detailTextViewLabel"
                android:text="@string/race" />
            <TextView
                style="@style/detailTextViewLabel"
                android:text="@string/character_class" />
            <TextView
                style="@style/detailTextViewLabel"
                android:text="@string/total_xp" />
            <TextView
                style="@style/detailTextViewLabel"
                android:text="@string/status" />

            <TextView
                android:id="@+id/character_description_label"
                style="@style/detailTextViewLabel"
                android:text="@string/description" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/character_race"
                style="@style/detailTextView" />
            <TextView
                android:id="@+id/character_class"
                style="@style/detailTextView" />
            <TextView
                android:id="@+id/character_xp"
                style="@style/detailTextView" />
            <TextView
                android:id="@+id/character_status"
                style="@style/detailTextView" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/delete_character_button"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_secondary_background_roundedcorner" />
        <Button
            android:id="@+id/edit_character_button"
            android:text="@string/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/delete_character_button"
            android:layout_alignTop="@id/delete_character_button"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp"/>
    </RelativeLayout>

    <ScrollView
        android:id="@+id/description_scrollview"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/character_details_layout"
        android:layout_above="@id/footer"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/character_description"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/detailTextView"/>
    </ScrollView>
</RelativeLayout>
