<?xml version="1.0" encoding="utf-8"?>

<!-- activity_settings.xml
    Purpose: Layout for SettingsActivity

    Drew Matheson, 2015.11.17: Created
    Isaac West, 2015.11.24: Initial Layout
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activityLayout"
    tools:context="ca.secondlifestory.activities.SettingsActivity">

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/loadingIndicator"
        android:progressDrawable="@drawable/loading_spinning_indicator"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true" >
        <TextView
            android:text="@string/title_activity_settings"
            style="@style/pageHeader" />

        <Button
            android:id="@+id/tutorials"
            style="@style/primaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/standard_padding"
            android:text="@string/tutorials"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="@dimen/standard_padding"
            android:background="#ffffff"/>

        <Button
            android:id="@+id/delete_all_characters_button"
            style="@style/secondaryButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/standard_padding"
            android:text="@string/delete_all_characters"/>
        <Button
            android:id="@+id/delete_all_data_button"
            style="@style/secondaryButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:text="@string/delete_all_data"/>
    </LinearLayout>

    <TextView
        android:text="@string/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/detail_text"
        android:textColor="@color/primary_text_default_material_dark"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
