<?xml version="1.0" encoding="utf-8"?>

<!-- activity_customize.xml
    Purpose: Layout for CustomizeActivity

    Drew Matheson, 2015.11.17: Created
    Isaac West, 2015.11.24: Initial Layout
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/activityLayout"
    tools:context="ca.secondlifestory.activities.CustomizeActivity"
    android:orientation="vertical"
    android:baselineAligned="false">

    <TextView
        style="@style/detailTextViewLabel"
        android:text="@string/race_name" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/new_race_name"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:singleLine="true" />
        <Button
            android:id="@+id/new_race_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/save_new_race"
            android:background="@drawable/button_background_roundedcorner" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_padding" />

    <TextView
        style="@style/detailTextViewLabel"
        android:text="@string/class_name" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/new_class_name"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:singleLine="true" />
        <Button
            android:id="@+id/new_class_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:text="@string/save_new_class"
            android:layout_weight="1"
            android:background="@drawable/button_background_roundedcorner" />
    </LinearLayout>

    <Space
        android:id="@+id/delete_race_spacer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_padding" />

    <TextView
        android:id="@+id/delete_race_label"
        style="@style/detailTextViewLabel"
        android:text="@string/delete_race" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/race_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/emptyListViewItem"
                android:id="@+id/empty_race_item"
                android:paddingTop="@dimen/spinner_single_line_height"
                android:text="@string/empty_delete_race_spinner" />
        </LinearLayout>

        <Button
            android:id="@+id/delete_race_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/delete_race"
            android:background="@drawable/button_secondary_background_roundedcorner" />
    </LinearLayout>


    <Space
        android:id="@+id/delete_class_spacer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_padding" />

    <TextView
        android:id="@+id/delete_class_label"
        style="@style/detailTextViewLabel"
        android:text="@string/delete_class" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25">
            <Spinner
                android:id="@+id/class_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                style="@style/emptyListViewItem"
                android:id="@+id/empty_class_item"
                android:paddingTop="@dimen/spinner_single_line_height"
                android:text="@string/empty_delete_character_class_spinner" />
        </LinearLayout>

        <Button
            android:id="@+id/delete_class_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_weight="1"
            android:text="@string/delete_class"
            android:background="@drawable/button_secondary_background_roundedcorner" />
    </LinearLayout>
</LinearLayout>
