<?xml version="1.0" encoding="utf-8"?>

<!-- fragment_character_upsert.xml
    Purpose: Create/Edit fragment layout for CharacterUpsertFragment

    Drew Matheson, 2015.11.23: Created
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/fragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.secondlifestory.activities.character.CharacterUpsertFragment"
    android:clickable="true"> <!-- Prevent any fragments behind this from being clicked -->

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/loadingIndicator"
        android:progressDrawable="@drawable/loading_spinning_indicator"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/upsert_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_character"
        style="@style/pageHeader" />

    <EditText
        android:id="@+id/upsert_character_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/characterNamePlaceholder"
        android:singleLine="true"
        android:layout_below="@id/upsert_title"
        android:inputType="textNoSuggestions" />

    <TextView
        android:id="@+id/upsert_character_race_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/upsert_character_name"
        android:text="Race"/>

    <Spinner
        android:id="@+id/upsert_character_race"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/upsert_character_race_label"/>

    <TextView
        android:id="@+id/upsert_character_class_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/upsert_character_race"
        android:text="Class"/>

    <Spinner
        android:id="@+id/upsert_character_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/upsert_character_class_label" />

    <EditText
        android:id="@+id/upsert_character_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/characterDetailsPlaceholder"
        android:minLines="1"
        android:maxLines="8"
        android:singleLine="false"
        android:layout_below="@id/upsert_character_class"
        android:inputType="text|textCapSentences|textMultiLine|textLongMessage"/>

    <Button
        android:id="@+id/upsert_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/cancel"
        android:background="@drawable/button_secondary_background_roundedcorner"/>

    <Button
        android:id="@+id/upsert_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/upsert_cancel"
        android:layout_alignParentRight="true"
        android:text="@string/save"
        android:background="@drawable/button_background_roundedcorner"/>

</RelativeLayout>
