<?xml version="1.0" encoding="utf-8"?>

<!-- fragment_event_detail.xml
    Purpose: Detail fragment layout for EventDetailFragment

    Drew Matheson, 2015.11.17: Created
    Isaac West, 2015.11.24: Initial Layout
-->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/fragmentLayout"
    tools:context="ca.secondlifestory.activities.event.PlayerStatsDetailFragment"
    android:clickable="true"> <!-- Prevent any fragments behind this from being clicked -->

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/loadingIndicator"
        android:progressDrawable="@drawable/loading_spinning_indicator"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/event_detail_title"
        style="@style/pageHeader"
        android:layout_alignParentTop="true"
        android:text="Title"
        android:maxLines="2"
        android:ellipsize="start"
        />

    <LinearLayout
        android:id="@+id/event_details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/event_detail_title">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
            <TextView
                style="@style/detailTextViewLabel"
                android:text="@string/date" />
            <TextView
                style="@style/detailTextViewLabel"
                android:text="@string/xp_gained"
                />
            <TextView
                style="@style/detailTextViewLabel"
                android:text="@string/characters_present" />

            <TextView
                android:id="@+id/event_description_label"
                style="@style/detailTextViewLabel"
                android:text="@string/description" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/event_date"
                style="@style/detailTextView" />
            <TextView
                android:id="@+id/event_xp"
                style="@style/detailTextView" />
            <TextView
                android:id="@+id/event_characters_present"
                style="@style/detailTextView" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/delete_event_button"
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_secondary_background_roundedcorner" />

        <Button
            android:id="@+id/edit_event_button"
            android:text="@string/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background_roundedcorner"
            android:layout_toRightOf="@id/delete_event_button"
            android:layout_alignTop="@id/delete_event_button"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="10dp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/description_scrollview"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/event_details_layout"
        android:layout_above="@id/footer"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/event_description"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/detailTextView"/>
    </ScrollView>
</RelativeLayout>